New fieldsToDraw Arraylist in City class